Fix loading & landing page(mobile view) project description spacing

--- a/src/project.css
+++ b/src/project.css
@@ -204,8 +204,8 @@ div.projectDisplay1 {
 .mobileExpandContentDescription {
   /* width: 80%; */
   font-size: 18px;
-  margin-left: 0.5%;
-  margin-right: 2%;
+  margin-left: 0.8%;
+  margin-right: 1%;
   margin-top: 0;
   margin-bottom: 0;
   align-items: flex-start;
